Rename Home Tech to H Tech on smaller screens to avoid breaking

--- a/hirola/front/static/front/css/base.css
+++ b/hirola/front/static/front/css/base.css
@@ -61,4 +61,13 @@ a {
 
 .hide-on-small-only .m3{
     padding: 0 !important;
+    margin: 0 !important;
+}
+
+li.a-divider{
+    padding: 0 !important;
+}
+
+.categories a {
+    padding-right: 0 !important;
 }
